syntax = "proto3";

package user;

option go_package = "Backend/created_proto/user"; // Specify your Go package location

import "google/protobuf/timestamp.proto"; // Import timestamp for date fields

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUserDetails (UserDetailsRequest) returns (UserDetailsResponse);
  rpc UpdateUserDetails (UserUpdateRequest) returns (UserUpdateResponse);
  rpc GetUserCreditScore (UserCreditScoreRequest) returns (UserCreditScoreResponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  google.protobuf.Timestamp date_of_birth = 5; // Consider using Google Protobuf Timestamp for date fields
  string address = 6;
}

message RegisterResponse {
  string message = 1;
  int32 status = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int32 status = 2;
}

message UserDetailsRequest {
  uint64 user_id = 1; // Request for details of user by ID
}

message UserDetailsResponse {
  string full_name = 1;
  string email = 2;
  string phone = 3;
  google.protobuf.Timestamp date_of_birth = 4; // Consider using Google Protobuf Timestamp for dates
  string address = 5;
  int32 credit_score = 6;
  int32 status = 7;
}

message UserUpdateRequest {
  uint64 user_id = 1;
  string full_name = 2;
  string phone = 3;  // Fixed phone field type mismatch
  string date_of_birth = 4;
  string address = 5;
}

message UserUpdateResponse {
  string message = 1;
  int32 status = 2;
}

message UserCreditScoreRequest {
  uint64 user_id = 1;
}

message UserCreditScoreResponse {
  int32 credit_score = 1;
  int32 status = 2;
}
